fix: responsive overflow error

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -51,3 +51,8 @@ body {
     max-width: 90%;
   }
 }
+@media screen and (max-width: 800px){
+  body {
+    overflow: auto;
+  }
+}
